clusters/vollminlab-cluster/dmz/masters-league/app/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masters-redis
  namespace: dmz
  labels:
    app: masters-redis
    env: production
    category: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: masters-redis
  template:
    metadata:
      labels:
        app: masters-redis
        env: production
        category: apps
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: redis
          image: redis:7.4.2-alpine
          args:
            - redis-server
            - "--save"
            - ""
            - "--appendonly"
            - "no"
          ports:
            - containerPort: 6379
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
