clusters/vollminlab-cluster/dmz/masters-league/app/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: masters-redis
  namespace: dmz
  labels:
    app: masters-redis
    env: production
    category: apps
spec:
  type: ClusterIP
  selector:
    app: masters-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
