clusters/vollminlab-cluster/dmz/masters-league/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: masters-league
  namespace: dmz
  labels:
    app: masters-league
    env: production
    category: apps
spec:
  type: NodePort
  selector:
    app: masters-league
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 32567
      protocol: TCP
